# ai-git-tool

./: LICENSE  README.md  package.json  pnpm-lock.yaml  repomix-output.txt
ai_git_tool/api/: .gitignore
ai_git_tool/api/src/: __init__.py
ai_git_tool/api/src/interfaces/: supabase.py
ai_git_tool/api/src/lib/: git_diff_processor.py
api/: pyproject.toml
api/src/interfaces/: llm.py
api/src/lib/: git_diff_processor.py
api/src/prompts/: git_diff_processor.md
api/src/utils/: error_handler.py  keys.py  logging.py
